# next-superjson-plugin

./: .gitignore  .kodiak.toml  Cargo.toml  README.md  package.json  rust-toolchain  tsconfig.esm.json  tsconfig.json
.cargo/: config
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: cargo.yml  publish.yml
src/: app.rs  lib.rs  page.rs  utils.rs
tests/: fixture.rs
tests/fixture/app/children/: code.js  output.js
tests/fixture/app/general/: output.js
tests/fixture/app/member/: code.js  output.js
tests/fixture/page/skip/either-is-missing/ssg_props/: code.js
tests/fixture/page/skip/multiple-exports/init-and-other/: output.js
tests/fixture/page/skip/multiple-exports/init-and-others/: code.js
tests/fixture/page/transform/export-from/page/: output.js
tests/fixture/page/transform/general/arrow/: code.js  output.js
tests/fixture/page/transform/general/class/: code.js  output.js
tests/fixture/page/transform/general/function/: code.js  output.js
tests/fixture/page/transform/get-static-props-with-paths/: output.js
tests/fixture/page/transform/mutable/: code.js
tests/fixture/skip/either-is-missing/page/: code.js
tests/fixture/skip/export-from/: output.js
tests/fixture/skip/gip-in-app-js/: output.js
tests/fixture/skip/multiple-exports/: code.js
tests/fixture/transform/export-from/: output.js
tests/fixture/transform/export-from/page/: code.js  output.js
tests/fixture/transform/export-from/props/: code.js
tests/fixture/transform/general/function/: output.js
tests/fixture/transform/get-initial-props/class/: output.js
tests/fixture/transform/get-initial-props/function/: output.js
tests/fixture/transform/get-initial-props/function-export-page-first/: output.js
tests/fixture/transform/get-static-props-with-paths/: code.js
tests/fixture/transform/import-export/: code.js  output.js
tests/fixture/transform/mutable/: output.js
tests/fixture/transform/server-component/: code.js  output.js
tools/: client.tsx  tools.tsx
(+3 files in other folders)
