[package]
name = "next_superjson"
version = "0.4.3"
edition = "2021"
authors = ["JH.Lee <contact@jins.dev>"]
description = "SWC Plugin of SuperJSON for Next.js"
license = "MIT/Apache-2.0"
repository = "https://github.com/orionmiz/next-superjson-plugin"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = "1"
serde_json = "1.0.79"
swc_core = {version = "0.23.*", features = [
  "plugin_transform",
  "ecma_ast",
  "ecma_utils",
  "ecma_visit",
  "ecma_transforms",
  "common",
]}
swc_common = {version = "0.28.1", features = ["concurrent"]}

[dev-dependencies]
swc_ecma_parser = "0.119.3"
testing = "0.26.0"

[profile.release]
lto = true
strip = true