[package]
name = "next_superjson"
version = "0.5.9"
edition = "2021"
authors = ["JH.Lee <contact@jins.dev>"]
description = "SWC Plugin of SuperJSON for Next.js"
license = "MIT/Apache-2.0"
repository = "https://github.com/orionmiz/next-superjson-plugin"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = "1.0.144"
serde_json = "1.0.85"
swc_core = { version = "0.78.*", features = ["ecma_plugin_transform", "ecma_ast", "ecma_utils", "ecma_visit", "ecma_transforms", "ecma_parser", "common"] }

[dev-dependencies]
testing = "0.33.11"

[profile.release]
lto = true
strip = true
